--- a/090518/styles.css
+++ b/090518/styles.css
@@ -17,9 +17,10 @@ body {
 	background-size: cover;
 }
 .name_tile {
+	display: flex;
 	width: 14vw;
 	height: 5vw;
-	font-size: 1.5vw;
+	font-size: 2vw;
 	position: absolute;
 	top: 1vw;
 	left: 1vw;
@@ -28,6 +29,7 @@ body {
 	/*padding: .5vw;*/
 	background: #FFF5EE;
 	border: .5vw solid #FFE4E1;
+	align-items: center;
 	/*white-space: pre-wrap;*/
 }
 .text_tile {
